--- a/dashboard/apps/network_manager.fma/css/style.css
+++ b/dashboard/apps/network_manager.fma/css/style.css
@@ -1,307 +1,22 @@
 body {
-  background: #eee;
-  height: 100%;
+  background: #eee
 }
 
-.code-area {
-  font-family: "Lucida Console", Monaco, monospace;
+#modal-title {
+  font-weight: 700;
+  color: #2E3865;
+}
+
+#confirm-modal-title {
+  font-size: 150%;
+  font-weight: 700;
+  font-style: oblique;
+  color: #2E3865;
+}
+
+#confirm-modal-description {
   color: black;
-  font-weight: normal;
-  font-size: 8pt;
-}
-
-.active-line {
-  background-color: #ccffcc;
-}
-
-.lineno {
-  color: blue;
-}
-
-.dropzone.blink { 
-  -webkit-box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
-    -moz-box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
-      box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
-}
-
-.dropzone {
-  min-height: 170px;
-}
-
-#dropzone .hovershow {
-  opacity: 0.0;
-} 
-
-#dropzone .hoverdim {
-  opacity: 1.0;
-}
-
-#dropzone.hover { 
-  border: 5px dashed #ccc; 
-  border-radius: 5px;
-  -webkit-transition: opacity .2s ease;
-  -moz-transition: opacity .2s ease;
-  -o-transition: opacity .2s ease;
-}
-  
-#dropzone.hover .hovershow {
-  opacity: 1.0;
-  -webkit-transition: opacity .2s ease;
-  -moz-transition: opacity .2s ease;
-  -o-transition: opacity .2s ease;
-
-}
-
-#dropzone.hover .hoverdim {
-  opacity: 0.2;
-  -webkit-transition: opacity .2s ease;
-  -moz-transition: opacity .2s ease;
-  -o-transition: opacity .2s ease;
-
-}
-#dropzone .message {
-  display: none;
-}
-
-#dropzone.hover .message {
-  display: block;
-  z-index: 3;
-  display: block; 
-  position: absolute;
-  top: 8em;
-  left: 50%;
-  text-align: center;
-  color: black;
-  font-weight: bold;
   font-style: italic;
-  width:100%;
-  margin: 0 0 0 -50%;
-  opacity: 0%;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: #666;
-} 
-.jobs-title:first-child {
-  min-height: 40px;
-}
-
-.jobs-title{
-  overflow: hidden;
-}
- .up-next{
-   position: absolute;
-   left: -200px;
-   top: 0;
-   transition: all 0.5s;
- }
- .now-running{
-   position: absolute;
-   top: 0;
-   left: -200px;
-   font-weight: bold;
-   transition: all 0.5s;
-
- }
- .without-job{
-   position: absolute;
-   left: -1000px;
-   top: 0;
-   transition: all 0.5s;
- }
- .with-job{
-   position: absolute;
-   left: -1000px;
-   top: 0;
-   transition: all 0.5s;
- 
- }
- 
- .jobs-wrapper{
-   position: relative;
- 
- }
-
-td.details-control {
-    width: 50px;
-    cursor: pointer;
-}
-
-td.actions-control {
-    width: 80px;
-    cursor: pointer;
-    content: attr('Preview Job');
-    text-align: center;
-
-}
-
-td.preview-control {
-    background: url('images/preview.png') no-repeat center center;
-    width: 80px;
-    cursor: pointer;
-    content: attr('Preview Job');
-}
-
-.more-details {
-  width: 36px;
-  height: 36px;
-  color: #A6A6A6;
-  vertical-align: text-top;
-  border: 1px solid #A6A6A6;
-  border-radius: 100%;
-  float: left;
-  text-align: center;
-  transform-origin: center;
-  transition: transform .5s linear;
-  transform-style: preserve-3D;
-}
-
-.more-details:hover {
-   border-color: #666;
-   color: #666;
-   transition: all .3s;
-}
-
-.more-details div {
-  position: relative;
-  font-family: "Lucida Console", Monaco, monospace;
-  top: 5px;
-  font-size: 1.7em;
-  transition: color .3s;
-}
-
-.more-details div:hover {
-  color: #666;
-}
-
-.columns {
-  padding: 0.1em;
-}
-
-.nextJobPrev {
-  background-color: white;
-  padding: 0 0 0 0;
-  fill: #333333;
-  transition: all 0.5s;
-  border: 0px;
-  display: none;
-  max-width:200px;
-}
-
-.svg:hover{
-  fill: #32B433;
-}
-.nextJobDesc {
-  max-height: 80px;
-
-}
-
-.ellipses {
-  font-size: 1.35em;
-  width: 1.7em;
-  height: 1.7em;
-  color: #A6A6A6;
-  vertical-align: text-top;
-  border: 1px solid #A6A6A6;
-  border-radius: 100%;
-  line-height: 1em;
-  float: left;
-  margin-left: 0.7em;
-}
-
-.ellipses:hover {
- border-color: #666;
- color: #666;
- transition: all .1s;
-}
-
-.dropDown {
-  position: absolute;
-  top: inherit;
-  left: 7px;
-  width: 175px;
-  margin-top: 3.1em;
-  text-align: left;
-  background-color: #ffffff;
-  padding-top: 1.5em;
-  border: 1px solid #dddddd;
-  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
-  display: none;
-  z-index: 9;
-}
-
-.dropDown a{
-  padding-left: 1em;
-}
-
-ul.pagination li a{
-color: #313366;
-}
-
-.jobActions {
-  list-style: none;
-  line-height: 2em;
-}
-
-.commentBox{
-  position: absolute;
-  top: inherit;
-  left: 33px;
-  width: 1em;
-  height: 1em;
-  margin-top: 2.6em;
-  transform: translatex(2.1em);
-  background-color: #ffffff;
-  -ms-transform: rotate(45deg); /* IE 9 */
-    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
-    transform: rotate(45deg);
-  border-top:    1px solid  #dddddd;
-  border-left:   1px solid  #dddddd;
-  z-index: 10;
-  display: none;
-}
-
-.dropDown a:hover{
-  color: #32B433;
-}
-
-.dropDownWrapper{
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 8;
-  display: none;
-}
-.icon-row svg {
-  fill: #333333;
-  max-width: 20px;
-  max-height: 20px;
-  margin-right: 1em;
-  transition: all 0.2s;
-}
-
-.icon-row img {
-  fill: #333333;
-  max-width: 20px;
-  max-height: 20px;
-  margin-right: 1em;
-  transition: all 0.2s;
-}
-
-.icon-row a {
-  display: none;
-}
-
-.icon-row {
-  padding-bottom: 2em;
-  padding-top: 2em;
-}
-
-tr.shown td.details-control {
-    background-color: #D23334;
-    width: 40px;
 }
 
 .noselect {
@@ -311,666 +26,46 @@ tr.shown td.details-control {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    cursor: pointer;
 }
 
-#holder { 
-  border: 5px dashed #ccc; 
-  border-radius: 5px; 
-  width: 100%; 
-  height: 100px; 
-  text-align:center; 
-  vertical-align: middle;
-  color: #ccc;
-  font-size: 20px;
-  padding-top: 20px;
-  cursor: pointer;
-}
-
-#holder.hover { 
-  border: 5px dashed black; 
-  color: black;
-  cursor: copy;
-}
-
-.child-row-label: {
-  font-weight: bold;
-  font-color: red;
-}
-
-.job-failed {
-  color: #FB0000;
-}
-
-.job-finished {
-  color: #32B433;
-}
-
-.job-cancelled {
-  color: #b35900;
-}
-
-.job-pending {
-  color: blue;
-}
-
-.alert-box .close {
-  color: #eee;
-  filter: alpha(opacity=95); /* For IE8 and earlier */
-  opacity: 0.95;
-}
-
-.reveal-modal {
-  padding: 13px;
-  padding: 0.8125rem;
-  min-height: none;
-}
-
-.reveal-modal .row.title {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-}
-
-.button-group>li { margin: 0; }
-
-.button-bar .button-group { margin-right: 0; }
-
-.button-bar .button-group li:first-child a {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.button-bar .button-group li:last-child a {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-button.small, .button.small {
-  padding-top: 13px;
-  padding-top: 0.8125rem;
-  padding-bottom: 13px;
-  padding-bottom: 0.8125rem;
-}
-
-@media only screen and (max-width: 40.063em) {
-  button.small, .button.small {
-    padding-top: 9px;
-    padding-top: 0.5625rem;
-    padding-bottom: 9px;
-    padding-bottom: 0.5625rem;
-    padding-right: 18px;
-    padding-right:  1.125rem;
-    padding-left: 18px;
-    padding-left: 1.125rem;
-  }
-}
-
-
-.btn { padding: 0;}
-
-td input, td select {margin:0 !important;}
-
-td.switch {
-  text-align: center;
-}
-
-td .button {
-  margin-bottom: 0;
-  padding: 13px 24px;
-  padding: 0.8125rem 1.5rem;
-}
-
-.tabs dd.active a, .tabs .tab-title.active a {
-  background: #666;
-  color: #fff;
-}
-
-.tabs dd > a, .tabs .tab-title > a {
-  color: #666;
-  padding: 8px 22px;
-  padding: 0.5rem 1.375rem;
-}
-
-header { padding: 0 3rem;}
-
-input[type="file"] {
-  color: #444;
-  height: 21px;
-  height: 2.3125rem;
-  padding: 8px;
-  padding: 0.5rem;
-}
-
-input[type="file"]::-webkit-file-upload-button {
-  visibility: hidden !important;
-  padding:0 !important;
-}
-
-input[type="file"]::before,
-input[type="file"]::-webkit-file-upload-button {
-  content: 'Select a file';
-  color: #eee;
-  display: inline-block;
-  background: #313366;
-  border: 1px solid #272952;
-  padding: 8px;
-  padding: 0.5rem;
-  outline: none;
-  #fff-space: nowrap;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  cursor: pointer;
-  width:33%;
-  text-align: center;
-  position: absolute;
-  top:0;
-  left:0;
-   -webkit-transition: background-color .5s;
-  transition: background-color .5s;
-}
-
-input[type="file"]:hover::before {
-  background-color: #272952;
-  -webkit-transition: background-color .3s;
-  transition: background-color .3s;
-}
-
-input[type="file"]:active {
-  outline: 0;
-}
-
-input[type="file"]:active::before {
-  background: #e3e3e3; /* Old browsers */
-  background: -moz-linear-gradient(top,  #e3e3e3 0%, #f9f9f9 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e3e3e3), color-stop(100%,#f9f9f9)); /* Chrome,Safari4+ */
-  background : -webkit-linear-gradient(top, #e3e3e3 0%, #f9f9f9 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #e3e3e3 0%,#f9f9f9 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #e3e3e3 0%,#f9f9f9 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #e3e3e3 0%,#f9f9f9 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3e3e3', endColorstr='#f9f9f9',GradientType=0 ); /* IE6-9 */
-}
-
-
-
-
-/* Custom Style */
-
-/*
-*** General ***
-*/
 .hidden, .hide { display:none; }
 
-
-
-
-/*
-*** Header ***
-*/
-
-.blue   { background-color:#313366 !important;  }
-.orange { background-color: #dd8728 !important; }
-.red    { background-color: #9c210c !important; }
-.grey   { background-color: #666 !important;    }
-
-header h2 {
-  color:#fff;
-  margin-top: 6px;
-  margin-top: 0.375rem;
-  margin-bottom : 6px;
-  margin-bottom: 0.375rem;
+.wifi4 {
+    background: url('../images/signal_4.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
 }
 
-@media only screen and (max-width: 40.063em) {
-  header h2 {
-    margin:0;
-    padding-top: 2px;
-    padding-top: 0.125em;
-    padding-bottom: 2px;
-    padding-bottom: 0.125em;
-  }
-
-  header section  {margin: 0; }
+.wifi3 {
+    background: url('../images/signal_3.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
+}
+.wifi2 {
+    background: url('../images/signal_2.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
+}
+.wifi1 {
+    background: url('../images/signal_1.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
+}
+.wifi0 {
+    background: url('../images/signal_0.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
 }
 
-section .title {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-}
-
-section .title .button { margin-bottom: 0; }
-
-section .center { text-align: center; }
-
-section.container {
-  background-color: white;
-  margin: 0.5em;
-    -moz-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  border: 1px solid #ccc;
-  padding: 0.5em;
-  border-radius: 0.25em;
-}
-
-section.current-job-container p {
-  font-size: 17px;
-  font-size: 1.0625rem;
-  margin-bottom: 0;
-  color: #666;
-}
-
-section.current-job-container .btn {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-section .no-jobs-item { cursor: pointer; }
-
-section > .row:not(.title) , .separator{
-/*  padding-top: 6px;*/
-  padding-top : 0.375rem;
-  padding-bottom: 6px;
-  padding-bottom: 0.375rem;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-  border-bottom: 1px solid #ccc;
-  line-height: 40rem;
-  line-height: 2.5rem;
-  vertical-align: middle;
-}
-
-section > .row:last-child, section > .content:last-child  > .row {
-  padding-bottom: 0;
-  border-bottom: none;
-}
-
-table {
-  margin: 0;
-}
-
-.tabs-content>.content {
-  margin: 0;
-  padding: 0;
-}
-/*
-*** Jobs ***
-*/
-
-.jobs-listing { color: #666; }
-.jobs-listing .name { font-size: 1.125rem; }
-.jobs-listing .option {
-  padding-right: 0px;
-  padding-left: 0px;
-  margin-right: 15px;
-  margin-right: 0.9375em;
-  margin-left: -15px;
-  margin-left: -0.9375em;
-  background: #dd8728;
-  text-align: center;
-  color: #eee;
-}
-
-
-
-
-
-/*
-*** Colors ***
-*/
-td[type="color"] div {
-  width: 32px;
-  width: 2rem;
-  height: 32px;
-  height: 2rem;
-  display: inline-block;
-  margin-right: 12px;
-  margin-right: 0.75rem;
-  border-radius: 16px;
-  border-radius: 1rem;
-  -moz-box-shadow: 0 0 3px rgba(0,0,0,0.4);
-  -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.4);
-  box-shadow: 0 0 3px rgba(0,0,0,0.4);
-}
-
-td[type="color"] div.selected {
-  -moz-box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-  -webkit-box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-  box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-}
-
-td[type="color"] div:hover {
-  cursor:pointer;
-}
-
-td[type="color"] div.add {
-  background : url('../img/icon_plus_cross.png') #fff no-repeat center;
-  background-size: 16px;
-  background-size: 1rem;
-}
-
-
-/*
-*** Tasks Lists ***
-*/
-
-tr.current {
-  background-color: rgb(221,135,40);
-  background-color: rgba(221,135,40,0.8);
-}
-
-tr.current td { color:#fff; }
-
-td.delete:hover, td.edit:hover {
-  cursor:pointer;
-}
-
-td.delete, td.edit {
-  padding: 0 3px;
-  padding: 0 0.1875rem;
-}
-
-td.delete span {
-  background-color: #9c210c;
-  color: #fff;
-  border-radius: 16px;
-  border-radius: 1rem;
-  padding: 5px 8px;
-  padding: 0.3125rem 0.5rem;
-}
-
-td.edit span{
-  background-color: #666;
-  color:#fff;
-  border-radius: 1rem;
-  padding: 5px 8px;
-  padding: 0.3125rem 0.5rem;
-}
-
-
-/* Special Custom Style : rotations et animations */
-.spinner {
-  -webkit-animation: rotator 1.4s linear infinite;
-  animation: rotator 1.4s linear infinite;
-}
-
-@-webkit-keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
-
-@keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
-.path {
-  stroke-dasharray: 187;
-  stroke-dashoffset: 0;
-  -webkit-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
-  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-}
-
-@-webkit-keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
-}
-
-@keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
-}
-@-webkit-keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-@keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-#tabpending{
-  position: relative;
-}
-.play-button {
-  display: none;
-  position: absolute;
-  top: 60;
-  right: 0;
-}
-
-.radial_progress {
-	margin-top: 5px;
-    background-color: #eee;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-	float: right;
-	margin-right: 50px;
-}
-@media screen and (max-width: 630px){
-  .play-button{
-    position: absolute;
-    right: 0px;
-    width: 5%;
-  }
-    .radial_progress{
-    position: relative;
-    right: 0;
-  }
-}
-
-.fill {
-    background-color: #32B433;
-    height: 100px;
-    width: 100px;
-    transition: -webkit-transform 1s;
-    transition: -ms-transform 1s;
-    transition: transform 1s;
-    position: absolute;
-    /* rect(<top>, <right>, <bottom>, <left>) */
-    clip: rect(0px, 50px, 1000px, 0px);
-    -webkit-backface-visibility: hidden;
-    border-radius: 50%;    
-}
-
-.perecent_circle .mask {
-    /* rect(<top>, <right>, <bottom>, <left>) */
-      clip: rect(0px,100px,100px,50px);
-      height: 100px;
-      width: 100px;
-      position: absolute;
-      transition: -webkit-transform 1s;
-        transition: -ms-transform 1s;
-            transition: transform 1s;
-}
-.mask .fill {
-    clip: rect(0px, 50px, 100px, 0px);
-}
-.inset {
-    background-color: #FFFFFF;
-    width: 90px;
-    height: 90px;
-    position: absolute;
-    margin-left: 5px;
-    margin-top: 5px;
-    border-radius: 50%;
-    box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
-}
-.shadow {
-      width: 100px;
-      height: 100px;
-      position: absolute;
-      border-radius: 50%;
-      box-shadow: inset 3px 3px 5px rgba(0,0,0,0.2);
-}
-
-.inset .percentage {
-     color: #32B433;
-     font-size: 11px;
-     width: 28px;
-     position: absolute;
-     line-height: 1;
-     text-align: center;
-     top: 10.5px;
-     left: 2px;
-	 font-family: 'source_sans_proextralight'; 
-}
-
-
-
-.play span {
-  height: 80px;
-  width: 80px;
-  display: block;
-  position: relative;
-  top: 0;
-  left: 0;
-  text-indent: -9999px;
-}
-
-.play span:before,
-.play span:after {
-  -webkit-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  transition: all 0.4s;
-}
-.play {
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin:-40px 0 0 -40px;
-  display: Block;
-}
-.play span {
-  margin: 0;
-}
-.play span:before {
-  content: '';
-  height: 0px;
-  width: 0px;
-  display: block;
-  background: transparent;
-  border: 25px transparent solid;
-  border-right-width: 0;
-  border-left-color: #32B433;
-  position: absolute;
-  top: 45%;
-  left: 60%;
-  margin: -20px 0 0 -15px;
-}
-.play span:after {
-  content: '';
-  height: 0px;
-  width: 0px;
-  display: block;
-  background: transparent;
-  border: 25px transparent solid;
-  border-right-width: 0;
-  border-left-color: #32B433;
-  position: absolute;
-  top: 45%;
-  left: 60%;
-  margin: -20px 0 0 -15px;
-}
-.play.active {
-  position: absolute;
-  width: 80px;
-  height: 80px;
-  left: 50%;
-  top: 50%;
-  z-index: 0;
-}
-.play.active span:before {
-  content: '';
-  border: 20px #9C210C solid;
-  border-top-width: 40px;
-  border-bottom-width: 0px;
-  top: 50%;
-  left: 45%;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-.play.active span:after {
-  content: '';
-  border: 20px #9C210C solid;
-  border-bottom-width: 0;
-  border-top-width: 40px;
-  top: 50%;
-  left: 45%;
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  transform: rotate(-90deg);
+.connected {
+    background: url('../images/status_connected.png') no-repeat center center;
+    background-size: contain;
+    width: 32px;
+    height: 32px;
 }
