--- a/dashboard/static/js/templates/app-icon.html
+++ b/dashboard/static/js/templates/app-icon.html
@@ -1,5 +1,5 @@
 <a href="#/app/<%= id %>">
-	<img class="<%= icon_background_color %>" src="<%= icon_url %>" alt="<%= name %>">
+	<img style="background-color: <%= icon_background_color %>;" src="<%= icon_url %>" alt="<%= name %>">
 </a>
 <div class="app-title">
 	<a href="#/app/<%= id %>"><%= name %></a>
