Update the editor with the capability to edit the submitted job name/description

--- a/dashboard/apps/editor.fma/css/style.css
+++ b/dashboard/apps/editor.fma/css/style.css
@@ -1,13 +1,14 @@
-.CodeMirror {
-  border: 1px solid #eee;
-}
-
 #editor { 
     position: relative;
     top: 0; 
     right: 0;
     bottom: 0;
     left: 0;
+}
+
+#modal-title {
+  font-weight: 700;
+  color: #2E3865;
 }
 
 body {
