--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -3,48 +3,43 @@ body {
   height: 100%;
 }
 
-.code-area {
-  font-family: "Lucida Console", Monaco, monospace;
-  color: black;
-  font-weight: normal;
-  font-size: 8pt;
+.blink { 
+  animation: pulse 1s infinite;
 }
 
-.active-line {
-  background-color: #ccffcc;
+.blink .inset {
+  animation: pulse 1s infinite;
 }
 
-.lineno {
-  color: blue;
+.blink .row.title {
+  border-bottom: 1px solid #91331E;
 }
 
-.dropzone.blink { 
-  -webkit-box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
-    -moz-box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
-      box-shadow: 0px 0px 12px 5px rgba(251,0,0,1);
+@keyframes pulse {
+  0% {
+    background-color: #ffffff;
+  }
+  50% {
+    background-color: #F9D5D8;
+  }
+  0% {
+    background-color: #ffffff;
+  }
 }
 
-.dropzone {
+.topjob {
   min-height: 170px;
 }
 
-#dropzone .hovershow {
-  opacity: 0.0;
-} 
-
-#dropzone .hoverdim {
-  opacity: 1.0;
-}
-
-#dropzone.hover { 
-  border: 5px dashed #ccc; 
-  border-radius: 5px;
+#tabpending.hover { 
+  /*border: 5px dashed #ccc; 
+  border-radius: 5px;*/
   -webkit-transition: opacity .2s ease;
   -moz-transition: opacity .2s ease;
   -o-transition: opacity .2s ease;
 }
   
-#dropzone.hover .hovershow {
+#tabpending.hover .hovershow {
   opacity: 1.0;
   -webkit-transition: opacity .2s ease;
   -moz-transition: opacity .2s ease;
@@ -52,31 +47,31 @@ body {
 
 }
 
-#dropzone.hover .hoverdim {
+#tabpending.hover .hoverdim {
   opacity: 0.2;
   -webkit-transition: opacity .2s ease;
   -moz-transition: opacity .2s ease;
   -o-transition: opacity .2s ease;
 
 }
-#dropzone .message {
+#tabpending .message {
   display: none;
 }
 
-#dropzone.hover .message {
+#tabpending.hover .message {
   display: block;
   z-index: 3;
-  display: block; 
   position: absolute;
-  top: 8em;
-  left: 50%;
   text-align: center;
-  color: black;
-  font-weight: bold;
-  font-style: italic;
-  width:100%;
-  margin: 0 0 0 -50%;
-  opacity: 0%;
+  width: 100%;
+  height: 100%;
+  font-weight: bolder;
+  font-size: 3em;
+  color: #444444;
+  background-image: url('../images/droptarget.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -91,24 +86,27 @@ h1, h2, h3, h4, h5, h6 {
 }
  .up-next{
    position: absolute;
-   left: -200px;
+   left: -1000px;
    top: 0;
+   font-weight: bold;
    transition: all 0.5s;
  }
  .now-running{
    position: absolute;
    top: 0;
-   left: -200px;
+   left: -1000px;
    font-weight: bold;
    transition: all 0.5s;
-
+   color: #91331E;
  }
+
  .without-job{
    position: absolute;
    left: -1000px;
    top: 0;
    transition: all 0.5s;
  }
+
  .with-job{
    position: absolute;
    left: -1000px;
@@ -852,7 +850,7 @@ td.edit span{
     clip: rect(0px, 50px, 100px, 0px);
 }
 .inset {
-    background-color: #FFFFFF;
+    background-color: white;
     width: 90px;
     height: 90px;
     position: absolute;
